--- a/Gallery.html
+++ b/Gallery.html
@@ -137,10 +137,11 @@
             <span class="CurrentPosition__Page">Gallery</span>
         </div>
         <div class="container-first-row">
-            <div class="brand__banner">
-                <img src="asset/img/GALLERY/banner.png" alt="banner">
-            </div>
-        </div> 
+          <div class="container-first-row brand__banner">
+              <div class="brand__banner-img"><img src="asset/img/GALLERY/banner.png" alt="banner">
+              </div>
+          </div>
+      </div>    
         <div class="container-second-row">
             <div class="container-second-row--slogan">
                 <span class="slogan"> Explore your true style.</span>
@@ -258,66 +259,68 @@
                 
             </div> 
         </div>
-
-
-
-
-
-
-
-    <footer>
-        <div class="container-fluid">
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-6">
-                  <div class="container-fluid footer-left">
-                    <div class="col-sm-6">
-                      <h3>Service</h3>
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Returns and Refunds</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Delivery</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Payment</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">FAQ</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-sm-6">
-                      <h3>Customer Care</h3>
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Contact Us</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Store Locator</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6">
-                  <div class="container-fluid footer-right">
-                    <h3>Accept Payment Methods</h3>
-                    <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
-                    <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
-                    <a href="#"><img src="asset/img/visa.png" alt="visa"></a>
-                    <div class="container-fluid">
-                      <a href="#">&copy;Copyright</a>
-                      <a href="#">TERMS OF USE</a>
-                      <a href="#">COOKIES POLICY</a>
-                      <a href="#">PRIVACY POLICY</a>
-                    </div>
-                  </div>
-                </div>
+  </div>
+  <footer>
+    <div class="container-fluid">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="container-fluid footer-left">
+              <div class="col-sm-6">
+                <h3>Service</h3>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Returns and Refunds</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Delivery</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Payment</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">FAQ</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-sm-6">
+                <h3>Customer Care</h3>
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Store Locator</a>
+                  </li>
+                </ul>
               </div>
             </div>
-          </div>    
-    </footer>
+          </div>
+          <div class="col-sm-6">
+            <div class="container-fluid footer-right">
+              <h3>Accept Payment Methods</h3>
+              <a href="#"><img src="images/visa.png" alt="visa"></a>
+              <a href="#"><img src="images/visa.png" alt="visa"></a>
+              <a href="#"><img src="images/visa.png" alt="visa"></a>
+              <div class="container-fluid">
+                <a href="#">&copy;Copyright</a>
+                <a href="#">TERMS OF USE</a>
+                <a href="#">COOKIES POLICY</a>
+                <a href="#">PRIVACY POLICY</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>      
+
+
+
+
+
+
+
+    
 </body>
 </html>
